    - Fix mod map on Mac with kerberos.
    - Fix focus on pass form.   

  [ Orion Poplawski ]
  * New upstream version (4.0.1.4):
    - Fix password connection with libssh 0.6.0

  [ Martti Pitkanen ]
  * New upstream version (4.0.1.4):
    - Update Finnish translation file.

  [ Robert Parts ]
  * New upstream version (4.0.1.4):
    - Add new translation of X2Go Client to Estonian.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Jan 2014 09:17:39 +0100

x2goclient (4.0.1.3-0x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.3):
    - changed keyboard settings. Supported modes: auto, none and config with
      model/layout(variant)
    - Enables forwarding (delegation) of GSSAPI credentials to the server. 
    - Make GSSAPI delegation configurable.
    - Update Russian translation file.
    - Rewrite SSH Classes to support libssh fix.
    - Set mod map from client to server on Mac, hide keyboard settings on Mac.
    - Fix mod map on Mac with kerberos.
    - Fix focus on pass form.

  [ Orion Poplawski ]
  * New upstream version (4.0.1.3):
    - Protect x2goplugin.html. Make it only available from the local host.

  [ Mike Gabriel ]
  * New upstream version (4.0.1.3):
    - Fix scan for pulseaudio cookie file. Issue got introduced in X2Go Client
      4.0.1.2 and let pulseaudio sound setup fail completely in the Linux
      X2Go Client of that version. (Fixes: #384).
    - Minor update of the German translation file.

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.1.3):
    - Update Bokmal translation file.

  [ Ricardo Díaz Martín ]
  * New upstream version (4.0.1.3):
    - Update Spanish translation file.

  [ Daniel Lindgren ]
  * New upstream version (4.0.1.3):
    - Update Swedish translation file.

  [ Stefan Baur ]
  * New upstream version (4.0.1.3):
    - Update German translation file.

  [ Martti Pitkanen ]
  * New upstream version (4.0.1.3):
    - New translation of X2Go Client to Finnish.
